# bloomberg_backtester

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt  benchmark.hpp  bloombergincludes.hpp  constants.hpp  data.hpp  dataretriever.hpp  daterules.hpp  events.hpp  execution.hpp  holidays.hpp  portfolio.hpp  slippage.hpp  strategy.hpp  transactioncosts.hpp
saves/: performance.csv  state1.txt
src/: configuration.json  constants.cpp  dataretriever.cpp  holidays.cpp
src/data/: data.cpp  dataretriever.cpp
src/infrastructure/: daterules.cpp  events.cpp  execution.cpp  portfolio.cpp
src/private/: configuration.json
src/python/: plotting.py  slackmanagement.py
src/simulation/: slippage.cpp  transactioncosts.cpp
src/strategy/: benchmark.cpp  strategy.cpp
src/strategy/custom/: CMakeLists.txt  basic_algo.cpp  momentum1.cpp
src/strategy/custom/src/: basic_algo.hpp  momentum1.hpp
test/: CMakeLists.txt  data_test.cpp  dataretriever_test.cpp  daterules_test.cpp  portfolio_test.cpp  strategy_test.cpp
test/lib/googletest/: CMakeLists.txt
